# PyOptiX

./: .flake8  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Makefile  PyOptiXUtil.h  README.md  create_binding.py  create_python_bindings.py  setup.cfg  setup.py
CMake/: FindOptiX.cmake
examples/: hello.cu  hello.ptx  hello.py  numba_support.py  pyramid.py  triangle.py  vec_math.py
optix/: CMakeLists.txt  __init__.py  nvrtc_support.py
src/: main.cpp
test/: conftest.py  sample5.py  sample5new.py  test_context.py  test_module.py  test_optix.py  test_pipeline.py  test_program_group.py
test/util/: tutil.py
